Fix rendering issue on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,6 @@
   color: white;
 }
 
-.App-header>.Introduction {
-  width: 400px;
-}
-
 .App-link {
   color: #61dafb;
 }
